# telegram-bot-rss-parser

./: .env.example  Cargo.toml  Dockerfile  feeds.opml
migrations/: 20241104093128_create_seen_posts_table.sql
src/: db.rs  main.rs  models.rs
