[package]
name = "tech-chronicle-bot"
version = "0.1.0"
edition = "2021"
author = "Vladimir Berezhenv <vberezhnev@proton.me>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-async-std"] }
dotenv = "0.15.0"
opml = "1.1.6"
rand = "0.8.5"
reqwest = "0.12.9"
rss = "2.0.9"
teloxide = "0.13.0"
tokio = { version = "1.41.0", features = ["full"] }
chatgpt_rs = "1.2.3"
sea-orm = "1.1.1"
